--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -132,4 +132,5 @@
     margin: 10px 10px 10px 10px;
     border: 3px solid hsl(var(--av-secondary-h), var(--av-secondary-s), var(--av-secondary-l-lighter));
     border-radius: 8px;
+    white-space: pre;
 }
